[metadata]
name = mdlearn
version = attr: mdlearn.__version__
description = Machine learning for molecular dynamics
long_description = file: README.md, LICENSE
long_description_content_type=text/markdown

url = https://github.com/ramanathanlab/mdlearn
author = Alexander Brace, Heng Ma, Debsindhu Bhowmik, Chakra Chennubhotla, Arvind Ramanathan
author_email = ramanathana@anl.gov
license = MIT License
keywords = machine-learning, molecular-dynamics, complex-biological-systems
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Physics

[options]
packages= find:
install_requires = 
    pyyaml
    pydantic
    h5py==2.10.0
    wandb
    pandas
    tqdm
python_requires = >=3.6

[options.extras_require]
torch = torch

[options.packages.find]
exclude =
    data
    tests
    docs
    env
    
[flake8]
exclude = .git,*migrations*,*alembic*
max-line-length = 118
extend-ignore = E203,W503,E501,E302,E231,F541
