[metadata]
name = mdlearn
version = attr: mdlearn.__version__
description = Machine learning for molecular dynamics
long_description = file: README.md, LICENSE
long_description_content_type=text/markdown

url = https://github.com/ramanathanlab/mdlearn
author = Alexander Brace, Heng Ma, Debsindhu Bhowmik, Chakra Chennubhotla, Arvind Ramanathan
author_email = ramanathana@anl.gov
license = MIT License
keywords = machine-learning, molecular-dynamics, complex-biological-systems
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Physics

[options]
packages= find:
install_requires = 
    pyyaml
    pydantic
    h5py
    pandas
    numpy
    tqdm
    plotly
python_requires = >=3.6

[options.extras_require]
torch = torch >= 1.7; wandb

[options.packages.find]
exclude =
    data
    test
    docs
    env
    
[flake8]
exclude = .git,*migrations*,*alembic*
max-line-length = 118
extend-ignore = E203,W503,E501,E302,E231
max-complexity = 14

[tool:pytest]
# https://docs.pytest.org/en/stable/customize.html
addopts = -x
junit_family=xunit1
filterwarnings =
    ignore::DeprecationWarning

[mypy]
show_error_codes = True
check_untyped_defs = True
follow_imports = normal
strict_optional = True
plugins = pydantic.mypy
strict = True
disallow_untyped_defs = True
disable_error_code = override

[mypy-pandas.*]
ignore_missing_imports = True

[mypy-plotly.*]
ignore_missing_imports = True

[mypy-tqdm.*]
ignore_missing_imports = True
